<resources>
    <string name="app_name">MyView</string>
    <string name="_12jt">Rp 12.000.000</string>
    <string name="hewan">Puppy</string>
    <string name="desc">Open adopsi untuk dua bayi anjing alaskan malamute. Bagi yang mampu mengurus dengan baik dan layak. Silahkan hubungi saya.</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="jenis">Jenis :</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="betina">Betina</string>
    <string name="age">Umur :</string>
    <string name="_2bln">2 bulan</string>
    <string name="ciri">Ciri-ciri :</string>
    <string name="desc_ciri">Bulu yang berwarna coklat dan putih \nBulu bewarna coklat dan putih \nBerat 20kg \nTinggi 30cm</string>
    <string name="own">Owner</string>
    <string name="call">Chat Now</string>
</resources>